# asm_avx_simd

./: Cargo.toml
benches/: matrix_benchmark.rs
src/: lib.rs
tests/: correctness.rs
