[package]
name = "asm_avx_simd"
version = "0.1.0"
edition = "2024"

[dependencies]
rayon = "1.10.0"

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }

[build]
rustflags = [
    "-C", "target-cpu=native",
    "-C", "target-feature=+avx512f,+avx512vl,+avx512bw",
]

[[bench]]
name = "matrix_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"